# halloween

./: .gitignore  ARDUINO_CLI_SUMMARY.md  CLAUDE.md  COMPLETE_DUPLICATION_ANALYSIS.md  COVERAGE.md  COVERAGE_ISSUES.md  CPP_COVERAGE_FIX_REQUIRED.md  EXECUTIVE_SUMMARY.md  GCOVR_IMPLEMENTATION_PLAN.md  MIGRATION_2025_TO_MULTI_YEAR.md  NEXT_AGENT_COVERAGE.md  PRODUCTION_EMBEDDED_TESTING.md  QUICK_FIX_REFERENCE.md  QUICK_REFERENCE.md  README.md  RESEARCH_SUMMARY.md  SESSION_2025-11-11_GCOV_PATH_FIX.md  SOLUTION_SUMMARY.md  SONARCLOUD_CFAMILY_COVERAGE_RESEARCH.md  SONARCLOUD_DIAGNOSTIC_REPORT.md  SONARCLOUD_ISSUES.md  SONARCLOUD_SETUP.md  STATUS_CPP_COVERAGE_INVESTIGATION.md  package.json  sonar-project.properties  verify-all.sh
.claude/: NEXT_AGENT.md  coverage-guide.md
.claude/agents/: code-reviewer.md  coder.md  project-manager.md  test-runner.md
.github/workflows/: cmake-prototype.yml  coverage.yml  test.yml
2025/: README.md  tamari_script.txt
2025/retros/: ante_chamber_retro.md  hatchery_retro.md  lair_retro.md  overall_learnings_and_improvements.md  spider_tunnel_retro.md  trash_room_retro.md  victim_room_retro.md
cmake_prototype/: .gitignore  CMakeLists.txt  COVERAGE_SOLUTION.md  MIGRATION.md  NEXT_AGENT.md  README.md  pixi.toml  sonar-project.properties
cmake_prototype/arduino_sketch/example_sketch/: example_sketch.ino
cmake_prototype/docs/: COMPARISON.md  PROTOTYPE_SUMMARY.md  QUICKSTART.md
cmake_prototype/lib/: CMakeLists.txt  servo_logic.cpp  servo_logic.h
cmake_prototype/test/: CMakeLists.txt  test_servo_logic.cpp
docs/setup/: SONARCLOUD_SETUP.md
hatching_egg/: .gitignore  README.md  SESSION_2025-11-11_CONTINUED.md  SONARCLOUD_COVERAGE_ROOT_CAUSE.md  SONARCLOUD_INVESTIGATION_REPORT.md  animation-behaviors.js  compile_commands.json  coverage_compilation.cpp  generate_arduino_config.py  pixi.toml  preview-app.js  preview.html  test_generate_arduino_config.py  test_leg_kinematics.js
hatching_egg/scripts/: fix_gcov_paths.sh  sync_headers.sh  upload.sh  upload_animation_tester.sh  upload_servo_tester.sh  upload_sweep_test.sh
scripts/: fix-lcov-paths.sh  run-coverage.sh
spider_crawl_projection/: AGENT_HANDOFF.md  CHANGELOG.md  COMPREHENSIVE_COVERAGE_PLAN.md  FINAL_SUMMARY.md  PHASE1_LESSONS_LEARNED.md  PHASE4_COMPLETE.md  PHASE5A_COMPLETE.md  PHASE5BC_COMPLETE.md  PHASE5EF_COMPLETE.md  PHASE6_COMPLETE.md  PHASES_5_6_IMPLEMENTATION_GUIDE.md  PROJECT_COMPLETE.md  README.md  REFACTORING_PROPOSAL.md  REGRESSION_2025_11_09.md  REMAINING_WORK_5DEF_6.md  SESSION_SUMMARY_2025_11_10.md  SONARCLOUD_FIXES.md  SONARCLOUD_STRATEGY.md  animation-math.js  boundary-utils.js  c8.config.json  config-defaults.js  config-validators.js  foot-positions.js  gait-state-machine.js  hopping-logic.js  index.html  keyboard-controller.js  leg-kinematics.js  leg-state-calculator.js  mode-controller.js  optimize-foot-positions.js  optimize-individual-legs.js  package.json  pixi.toml  position-utils.js  run-all-tests.sh  spider-animation.js  spider-editor.html  (+23 more)
tools/: README.md  SONARCLOUD_API.md  gcov_diagnostic.py  sonarcloud_verify.py  test_sonarcloud_verify.py
twitching_body/: AGENT_HANDOFF.md  README.md  pixi.toml
window_spider_trigger/: .gitignore  README.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  SONARCLOUD_COVERAGE_ISSUE.md  jest.config.js  package.json  pixi.toml  server.js  server.test.js
(+41 files in other folders)
